first text wolk

--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Text Cloud</title>
    <link rel="stylesheet" href="./index.css">
+   <link rel="preconnect" href="https://fonts.gstatic.com">
+   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
+
 <body>
    <div class="cloud">
-
+      <header>
+         <h1>Selecteer categorie vragen</h1>
+      </header>
+      <div class="content">
+         <h2>HTML</h2>
+         <h2>CSS</h2>
+         <h2>Javascript</h2>
+      </div>
    </div>
+   <script src="./script.js" type="module"></script>
 </body>
+
 </html>
