--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
          <h1>Selecteer categorie vragen</h1>
       </header>
       <div class="content">
-         <h2>HTML</h2>
-         <h2>CSS</h2>
-         <h2>Javascript</h2>
+         <button>HTML</button>
+         <button>CSS</button>
+         <button>Javascript</button>
       </div>
    </div>
    <script src="./script.js" type="module"></script>
