--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
          <button>Javascript</button>
       </div>
    </div>
+   <template id="question-template">
+      <div class="question">
+         <h3></h3>
+         <div class="answer-container"></div>
+      </div>
+      <div class="answer"></div>
+   </template>
    <script src="./script.js" type="module"></script>
 </body>
 
