--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    <template id="question-template">
       <div class="question">
          <h3></h3>
-         <div class="answer-container"></div>
+         <div class="options-container"></div>
       </div>
    </template>
    <script src="./script.js" type="module"></script>
