--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Text Cloud</title>
-   <link rel="stylesheet" href="./index.css">
+   <link rel="stylesheet" href="./styles/index.css">
    <link rel="preconnect" href="https://fonts.gstatic.com">
    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
@@ -17,13 +17,15 @@
          <h1>Selecteer categorie vragen</h1>
       </header>
       <div class="content">
-         <button>HTML</button>
-         <button>CSS</button>
-         <button>Javascript</button>
+         <div class="categories">
+            <button>HTML</button>
+            <button>CSS</button>
+            <button>Javascript</button>
+         </div>
       </div>
    </div>
    <template id="question-template">
-      <div class="question">
+      <div class="question hidden">
          <h3></h3>
          <div class="options-container"></div>
       </div>
