--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 <body>
    <div class="cloud">
       <header>
-         <h1>Selecteer categorie vragen</h1>
+         <h1 class="all_categories">Selecteer categorie vragen</h1>
+         <h1 class="category hidden">
+            <button>Terug</button> <span></span>
+         </h1>
       </header>
       <div class="content">
          <div class="categories">
