--- a/index.html
+++ b/index.html
@@ -28,6 +28,34 @@
       <div class="question hidden">
          <h3></h3>
          <div class="options-container"></div>
+         <div class="controls">
+            <svg 
+               fill="none" 
+               stroke="currentColor" 
+               viewBox="0 0 24 24" 
+               xmlns="http://www.w3.org/2000/svg"
+            >
+               <path 
+                  stroke-linecap="round" 
+                  stroke-linejoin="round" 
+                  stroke-width="2" 
+                  d="M15 19l-7-7 7-7"
+               ></path>
+            </svg>
+            <svg
+               fill="none" 
+               stroke="currentColor" 
+               viewBox="0 0 24 24"
+               xmlns="http://www.w3.org/2000/svg"
+            >
+               <path 
+                  stroke-linecap="round" 
+                  stroke-linejoin="round" 
+                  stroke-width="2" 
+                  d="M9 5l7 7-7 7"
+               ></path>
+            </svg>
+         </div>
       </div>
    </template>
    <script src="./script.js" type="module"></script>
