initial prev button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
          <div class="controls">
             <svg 
                fill="none" 
+               class="prev disabled"
                stroke="currentColor" 
                viewBox="0 0 24 24" 
                xmlns="http://www.w3.org/2000/svg"
@@ -44,6 +45,7 @@
             </svg>
             <svg
                fill="none" 
+               class="next disabled"
                stroke="currentColor" 
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
