--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                   d="M15 19l-7-7 7-7"
                ></path>
             </svg>
+            <p class="progress"></p>
             <svg
                fill="none" 
                class="next disabled"
